--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,11 @@
   <uses-feature android:name="android.hardware.bluetooth" />
   <uses-permission android:name="android.permission.BLUETOOTH" />
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- crashed without this -->
+  <uses-permission android:name="android.permission.VIBRATE" />
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
   <!-- permissions remove list (merged from sub modules)-->
@@ -22,7 +24,6 @@
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" tools:node="remove" />
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" tools:node="remove" />
   <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" tools:node="remove" />
-  <uses-permission android:name="android.permission.FOREGROUND_SERVICE" tools:node="remove" />
   <uses-permission android:name="com.sec.android.provider.badge.permission.READ" tools:node="remove"/>
   <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" tools:node="remove" />
   <uses-permission android:name="com.htc.launcher.permission.READ_SETTINGS" tools:node="remove" />
@@ -48,15 +49,6 @@
     android:allowBackup="false"
     android:theme="@style/AppTheme"
   >
-    <activity
-      android:name=".SplashActivity"
-      android:theme="@style/SplashTheme"
-      android:label="@string/app_name">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
-    </activity>
 
     <activity
       android:name=".MainActivity"
@@ -71,10 +63,34 @@
       tools:ignore="LockedOrientationActivity"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher"
-      android:immersive="true"
-      android:exported="true"
-    />
+      android:immersive="true">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
 
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+    <meta-data  android:name="com.dieam.reactnativepushnotification.notification_foreground"
+                android:value="true"/>
+    <meta-data  android:name="com.dieam.reactnativepushnotification.channel_create_default"
+                android:value="true"/>
+    <!-- <meta-data  android:name="com.dieam.reactnativepushnotification.notification_color"
+                android:resource="@color/colorPrimary"/> -->
+
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" />
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver">
+        <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED" />
+        </intent-filter>
+    </receiver>
+    <service
+        android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationListenerService"
+        android:exported="false" >
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT" />
+        </intent-filter>
+    </service>    
   </application>
 </manifest>
