--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-platform :ios, '12.0'
+platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
 
@@ -84,7 +84,7 @@ target 'ProtectScotland' do
   pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi'
   pod 'React-jsiexecutor', :path => '../node_modules/react-native/ReactCommon/jsiexecutor'
   pod 'React-jsinspector', :path => '../node_modules/react-native/ReactCommon/jsinspector'
-  pod 'ReactCommon/callinvoker', :path => "../node_modules/react-native/ReactCommon"
+  pod 'React-callinvoker', :path => '../node_modules/react-native/ReactCommon/callinvoker'
   pod 'ReactCommon/turbomodule/core', :path => "../node_modules/react-native/ReactCommon"
   pod 'Yoga', :path => '../node_modules/react-native/ReactCommon/yoga', :modular_headers => true
 
@@ -98,14 +98,11 @@ target 'ProtectScotland' do
   pod 'SSZipArchive'
   pod 'Alamofire', '~> 5.2'
   pod 'KeychainSwift', '~> 19.0'
-
-  target 'ProtectScotlandTests' do
-    inherit! :complete
-    # Pods for testing
-  end
-
+  
   use_native_modules!
+
   use_unimodules!
+
   use_frameworks!
   # Enables Flipper.
   #
@@ -115,4 +112,5 @@ target 'ProtectScotland' do
   # post_install do |installer|
   #   flipper_post_install(installer)
   # end
+
 end
