--- a/package.json
+++ b/package.json
@@ -17,77 +17,83 @@
     "postinstall": "./postinstall.sh"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "^1.11.0",
+    "@react-native-community/async-storage": "^1.12.0",
+    "@react-native-community/datetimepicker": "^3.0.2",
     "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-community/netinfo": "^5.9.4",
-    "@react-native-community/push-notification-ios": "^1.3.0",
-    "@react-navigation/bottom-tabs": "^5.6.1",
-    "@react-navigation/native": "^5.7.0",
-    "@react-navigation/stack": "^5.6.2",
+    "@react-native-community/netinfo": "^5.9.6",
+    "@react-native-community/picker": "^1.7.1",
+    "@react-native-community/push-notification-ios": "^1.5.0",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "art": "^0.10.3",
     "babel-plugin-dotenv-import": "^2.1.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "date-fns": "^2.14.0",
-    "expo-asset": "^8.1.5",
+    "date-fns": "^2.16.1",
+    "expo-asset": "^8.1.7",
     "expo-crypto": "^8.2.1",
-    "expo-font": "^8.2.1",
+    "expo-font": "^8.2.2",
     "expo-haptics": "^8.2.1",
     "expo-intent-launcher": "^8.2.1",
     "expo-localization": "^8.2.1",
-    "expo-secure-store": "^9.0.1",
+    "expo-secure-store": "^9.1.0",
     "expo-web-browser": "^8.3.1",
-    "formik": "^2.1.4",
-    "i18next": "^19.5.6",
+    "formik": "^2.1.5",
+    "i18next": "^19.7.0",
+    "lodash": "^4.17.20",
     "react": "16.13.1",
     "react-i18next": "^11.7.0",
-    "react-native": "0.62.2",
-    "react-native-dotenv": "^2.2.0",
+    "react-native": "0.63.2",
+    "react-native-dotenv": "^2.4.0",
     "react-native-easy-markdown": "^2.0.0",
-    "react-native-exposure-notification-service": "^1.1.26",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-exposure-notification-service": "^1.1.32",
+    "react-native-gesture-handler": "^1.8.0",
     "react-native-google-safetynet": "^1.0.0",
     "react-native-ios11-devicecheck": "^0.0.3",
     "react-native-loading-spinner-overlay": "^1.1.0",
     "react-native-modal": "^11.5.6",
-    "react-native-permissions": "^2.1.5",
-    "react-native-push-notification": "^3.5.2",
-    "react-native-safe-area-context": "^3.1.1",
-    "react-native-screens": "^2.8.0",
-    "react-native-ssl-pinning": "^1.4.8",
+    "react-native-modal-datetime-picker": "^8.9.3",
+    "react-native-permissions": "^2.2.0",
+    "react-native-push-notification": "^5.1.0",
+    "react-native-safe-area-context": "^3.1.7",
+    "react-native-screens": "^2.10.1",
+    "react-native-ssl-pinning": "1.4.9",
     "react-native-svg": "^12.1.0",
     "react-native-svg-charts": "^5.4.0",
     "react-native-unimodules": "^0.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.11.6",
     "@babel/runtime": "^7.10.4",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/detox": "^16.4.1",
     "@types/jasmine": "^3.5.10",
     "@types/jest": "^26.0.4",
-    "@types/react-native": "^0.63.1",
+    "@types/lodash": "^4.14.161",
+    "@types/react-native": "^0.63.18",
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-loading-spinner-overlay": "^0.5.2",
-    "@types/react-native-push-notification": "^3.0.9",
+    "@types/react-native-push-notification": "^5.0.2",
     "@types/react-native-svg-charts": "^5.0.3",
     "@types/react-test-renderer": "16.9.2",
-    "@typescript-eslint/eslint-plugin": "^3.7.1",
-    "@typescript-eslint/parser": "^3.6.0",
-    "babel-jest": "^26.1.0",
-    "detox": "^17.1.1",
-    "eslint": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "babel-jest": "^26.3.0",
+    "detox": "^17.5.3",
+    "eslint": "^7.9.0",
     "eslint-plugin-detox": "^1.0.0",
-    "eslint-plugin-jest": "^23.19.0",
+    "eslint-plugin-jest": "^24.0.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react-native-a11y": "^2.0.0",
-    "husky": "^4.2.5",
-    "jest": "^26.1.0",
+    "husky": "^4.3.0",
+    "jest": "^26.4.2",
     "jest-circus": "^26.1.0",
-    "lint-staged": "^10.2.11",
-    "metro-react-native-babel-preset": "^0.61.0",
-    "prettier": "^2.0.4",
+    "lint-staged": "^10.3.0",
+    "metro-react-native-babel-preset": "^0.63.0",
+    "prettier": "^2.1.1",
     "react-test-renderer": "16.13.1",
-    "ts-jest": "^26.1.0",
-    "typescript": "^3.9.6"
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   },
   "jest": {
     "preset": "react-native",
